--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,6 +31,7 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     # JDBC URL을 jdbc:h2:mem:account 로 설정후 Connect를 누르면 DB에 접근 가능
-    url: jdbc:h2:mem:account;MODE=MySQL;
+    url: jdbc:h2:tcp://localhost/~/account
+    #jdbc:h2:mem:account;MODE=MySQL;
     username: SA
     password:
