Feat: "파일 업로드시 실제이름, UUID, URL 저장 구현"

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 // Amazon S3 관련 의존성
-	implementation "com.amazonaws:aws-java-sdk-s3:1.12.409"
+	implementation "com.amazonaws:aws-java-sdk-s3:1.12.281"
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
+
 }
 
 tasks.named('test') {
