Chore: "도메인을 환경변수로 주도록 설정"
* `application.yaml`

설정값으로 domain을 두고, 환경 변수를 가져오도록 했다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,13 @@
 jwt:
   secret-key: ${JWT_KEY}
+
 server:
   error:
     whitelabel:
       enabled: false
+
+domain: ${DOMAIN}
+
 ---
 
 spring:
@@ -45,7 +49,6 @@ cloud:
 
     stack:
       auto: false
-
 
 ---
 
