Feat: "요청 데이터 유효성 검증 로직 추가"
* `build.gradle`
요청으로 들어오는 데이터를 검증해주기 위해 Spring Validation 관련 의존성을 추가했다.

* `ErrorCode.java`
요청 데이터 파싱 오류 코드를 추가했다.

* `GlobalControllerAdvice.java`
요청 데이터 파싱 오류를 처리해주는 로직을 추가했다.
Validation에 걸리면 validExceptionHandler에서, 그 외의 상황은 JsonParseExceptionHandler에서 처리한다.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 // Amazon S3 관련 의존성
 	implementation "com.amazonaws:aws-java-sdk-s3:1.12.281"
 	implementation 'javax.xml.bind:jaxb-api:2.3.0'
+// RequestDto 를 검증하는 Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
 
 }
 
