--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,48 @@ domain: ${DOMAIN}
 spring:
   config:
     activate:
+      on-profile: test
+
+  jpa:
+    defer-datasource-initialization: false
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
+    open-in-view: false
+    database-platform: org.hibernate.dialect.H2Dialect
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:account;MODE=MySQL;
+    username: SA
+    password:
+
+  sql:
+    init:
+      mode: never
+
+cloud:
+  aws:
+    credentials:
+      accessKey:  ${AWS_ACCESS_KEY_ID}
+      secretKey:  ${AWS_SECRET_ACCESS_KEY}
+    s3:
+      bucket: ${BUCKET_NAME}
+      dir: /image
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+---
+
+spring:
+  config:
+    activate:
       on-profile: dev
 
   jpa:
@@ -46,7 +88,6 @@ cloud:
       dir: /image
     region:
       static: ap-northeast-2
-
     stack:
       auto: false
 
@@ -68,7 +109,7 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -98,6 +139,5 @@ cloud:
       dir: /image
     region:
       static: ap-northeast-2
-
     stack:
       auto: false
