Feat: 설정 파일 변경
* OAuth 클라이언트 관련 정보 기입
클라이언트 ID, 비밀번호는 환경 변수로 넣도록 하고, 유저의 이메일 정보를 받아오도록 설정
authorization server가 authorization code를 보내주는 redirect uri는 프론트엔드 uri로 설정해야 하므로 임시 uri를 넣어 놓음

db datasource url 부분은 account보다 filmdoms가 어울리므로 변경함

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -120,14 +120,24 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    # JDBC URL을 jdbc:h2:mem:account 로 설정후 Connect를 누르면 DB에 접근 가능
-    url: jdbc:h2:mem:account;MODE=MySQL;
+    # JDBC URL을 jdbc:h2:mem:filmdoms 로 설정후 Connect를 누르면 DB에 접근 가능
+    url: jdbc:h2:mem:filmdoms;MODE=MySQL;
     username: SA
     password:
 
   sql:
     init:
       mode: always
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${OAUTH_GOOGLE_CLIENT_ID}
+            client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
+            scope: email
+            redirect-uri: "{baseUrl}/front/oauth2/google"
 
 cloud:
   aws:
