Feat : "Cloudtype 배포를 위해 yaml dev 부분에 oauth 설정추가"

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -78,6 +78,16 @@ spring:
     init:
       mode: always
 
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${OAUTH_GOOGLE_CLIENT_ID}
+            client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
+            scope: email
+            redirect-uri: "{baseUrl}/front/oauth2/google"
+
 cloud:
   aws:
     credentials:
