--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -67,6 +67,7 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
+    database-platform: org.hibernate.dialect.MariaDBDialect
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
