--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,19 @@ server:
 
 domain: ${DOMAIN}
 
+spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${GMAIL_ADDRESS}
+    password: ${GMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 ---
 
 spring:
@@ -149,6 +162,10 @@ spring:
             client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
             scope: email
             redirect-uri: "{baseUrl}/front/oauth2/google"
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 cloud:
   aws:
