--- a/src/main/resources/redis.yml
+++ b/src/main/resources/redis.yml
@@ -7,5 +7,6 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: svc.sel3.cloudtype.app
+      port: 30418
+      password: ${REDIS_SECRET}
