--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
       enabled: false
 
 domain: ${DOMAIN}
-
+admin-password: ${ADMIN}
 # 어플리케이션 실행 시 LocalVariableTableParameterNameDiscoverer가 WARN 로그를 출력하지 않도록 함
 logging:
   level:
