Feat: errors.properties 파일 추가
에러 메시지를 한 곳에서 관리할 수 있도록 errors.properties 파일과 관련 스프링 설정을 추가함

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ logging:
       springframework:
         core:
           LocalVariableTableParameterNameDiscoverer: error
+
+spring:
+  messages:
+    basename: errors
 ---
 
 spring:
