--- a/src/main/resources/config/oauth/application.yml
+++ b/src/main/resources/config/oauth/application.yml
@@ -7,4 +7,4 @@ spring:
             client-id: ${OAUTH_GOOGLE_CLIENT_ID}
             client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
             scope: email
-            redirect-uri: "{baseUrl}/front/oauth2/google"
+            redirect-uri: ${OAUTH_GOOGLE_REDIRECT_URI}
