--- a/src/main/resources/config/redis/application.yml
+++ b/src/main/resources/config/redis/application.yml
@@ -20,6 +20,6 @@ spring:
 
   data:
     redis:
-      host: svc.sel3.cloudtype.app
-      port: 30000
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
       password: ${REDIS_SECRET}
