Feat: 설정 파일 변경
레퍼러 URI와 함께 사용할 redirect-path 정보를 주기 위해 설정 파일에 해당 항목 추가

--- a/src/main/resources/config/oauth/application.yml
+++ b/src/main/resources/config/oauth/application.yml
@@ -8,3 +8,4 @@ spring:
             client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
             scope: email
             redirect-uri: ${OAUTH_GOOGLE_REDIRECT_URI}
+            redirect-path: /auth/google
