--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -3,3 +3,8 @@ NotNull.nickname=\uB2C9\uB124\uC784\uC740 \uD544\uC218\uB85C \uC785\uB825\uB418\
 NotNull.favoriteMovies=\uAD00\uC2EC \uC601\uD654\uB294 \uD544\uC218\uB85C \uC785\uB825\uB418\uC5B4\uC57C \uD569\uB2C8\uB2E4.
 Size.favoriteMovies=\uAD00\uC2EC \uC601\uD654\uB294 \uCD5C\uC18C {2}\uAC1C, \uCD5C\uB300 {1}\uAC1C \uC9C0\uC815\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4. 
 duplicate.favoriteMovies=\uAD00\uC2EC \uC601\uD654 \uB9AC\uC2A4\uD2B8\uC5D0 \uC911\uBCF5\uC774 \uC788\uC2B5\uB2C8\uB2E4.
+Size.title=\uC81C\uBAA9\uC740 {1}\uC790 \uC774\uB0B4\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+Size.content=\uBCF8\uBB38\uC740 {1}\uC790 \uC774\uB0B4\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+NotBlank.title=\uC81C\uBAA9\uC740 \uACF5\uBC31\uC77C \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+NotBlank.content=\uBCF8\uBB38\uC740 \uACF5\uBC31\uC77C \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+NotNull.mainImageId=\uBA54\uC778 \uC774\uBBF8\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
